--- a/Weather/app/src/main/res/layout/activity_main.xml
+++ b/Weather/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             app:toolbarId="@+id/toolbar"
             app:collapsedTitleGravity="left|center_vertical"
             app:expandedTitleMarginStart="16dp"
-            app:expandedTitleMarginBottom="100dp"
+            app:expandedTitleMarginBottom="110dp"
             app:expandedTitleTextAppearance="@style/ExpandedTitleTextStyle"
             app:collapsedTitleTextAppearance="@style/CollapsedTitleTextStyle">
 
@@ -49,31 +49,16 @@
                     android:id="@+id/rl_name"
                     android:layout_alignBottom="@+id/img_cloud"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
+                    android:layout_height="match_parent"
+                    android:background="#66000000"
+                    android:gravity="bottom">
 
-                    <TextView
-                        android:id="@+id/tv_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:paddingStart="16dp"
-                        android:paddingLeft="16dp"
-                        android:paddingEnd="5dp"
-                        android:paddingRight="5dp"
-                        android:singleLine="true"
-                        android:textColor="#FFFFFF"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:visibility="invisible" />
 
 
                     <TextView
                         android:id="@+id/tv_temperature"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv_name"
-                        android:layout_marginTop="20dp"
                         android:ellipsize="end"
                         android:textStyle="bold"
                         android:paddingLeft="16dp"
@@ -128,6 +113,6 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_stylist_follow" />
+    <include layout="@layout/content_weather_list" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
