--- a/Weather/app/src/main/res/layout/item_weather.xml
+++ b/Weather/app/src/main/res/layout/item_weather.xml
@@ -4,31 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:orientation="vertical"
     app:cardCornerRadius="6dp"
     app:cardElevation="4dp"
     android:clickable="true"
     android:longClickable="true"
     app:cardUseCompatPadding="false"
-    android:focusable="true">
+    android:focusable="true"
+    android:layout_marginLeft="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:paddingBottom="16dp">
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp">
 
         <ImageView
             android:id="@+id/userImage"
-            android:layout_width="0dp"
+            android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="6dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/txt_created_Time"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txt_temperature"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="1dp"
             android:contentDescription="@null" />
 
         <TextView
@@ -37,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             android:textColor="#585858"
             android:textSize="16sp"
@@ -76,7 +79,7 @@
             android:src="@drawable/ic_more_vert_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userImage"
+            app:layout_constraintTop_toBottomOf="@+id/txt_created_Time"
             android:contentDescription="@null" />
 
 
