--- a/Weather/app/src/main/res/values/colors.xml
+++ b/Weather/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#32488c</color>
+    <color name="colorPrimaryDark">#242658</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="blue">#6452f0</color>
-    <color name="text_color">#03DAC5</color>
+    <color name="text_color">#FFFFFF</color>
 </resources>
